--- a/src/Pages/Compra/Compra.module.css
+++ b/src/Pages/Compra/Compra.module.css
@@ -5,3 +5,9 @@
     width: 70%;
     text-align: center;
 }
+
+.sucess{
+    color: #155724;
+    background-color: #D4EDDA;
+    border-color: #C3E6CB;
+}
